--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,13 @@
   padding: 6px 35px !important;
 }
 
+.custom-question-centered .btn-toolbar .btn-primary {
+  background-color: rgb(255, 255, 255) !important;
+  background-image: none !important;
+  color: rgb(0, 92, 232) !important;
+  border-color: rgb(0, 92, 232) !important;
+}
+
 .App-header {
   background-color: #222;
   height: 150px;
