--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,10 @@
   margin: 20vh auto 20px auto;
   width: 30%;
 }
+.custom-input-centered, .custom-next-centered {
+  width: 30%;
+  margin: 0 auto;
+}
 .custom-buttom-centered {
   margin: 30px auto 0 auto;
 }
@@ -52,18 +56,16 @@ a .custom-question-centered {
 }
 
 .custom-buttons-centered {
-  width: 77%;
+  width: 66%;
   margin: 0 auto;
 }
 
-.custom-buttons-centered .btn-toolbar {
+.custom-buttons-centered .form-group {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
-.custom-buttons-centered .btn-toolbar .btn-primary {
-  
-}
+
 
 .App-header {
   background-color: #222;
@@ -79,4 +81,36 @@ a .custom-question-centered {
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+
+.custom-buttons-centered input {
+    position: absolute;
+    left: -9999px;
+}
+.custom-buttons-centered .checkbox label {
+    display: block;
+    margin: 0 7px;
+    padding: 8px 10px;
+    border: 1px solid #BBBBBB;
+    background: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .12);
+    cursor: pointer;
+    color: #005ce8;
+    border-color: #005ce8;
+    border-radius: 16px;
+    font-size: 12px;
+}
+.custom-buttons-centered label.selected {
+    background: #2595ff;
+    color: #fff;
+}
+.radio_buttons div:first-child label {
+    margin-left: 0;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+.radio_buttons div:last-child label {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
