--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,11 @@
 /*STYLES FOR QUESTION CONTAINER*/
 .custom-question-centered {
   margin: 20vh auto 20px auto;
-  width: 30%;
+  width: 32%;
 }
 .custom-input-centered, .custom-next-centered {
-  width: 30%;
-  margin: 0 auto;
+  width: 32%;
+  margin: 20px auto;
 }
 .custom-buttom-centered {
   margin: 30px auto 0 auto;
@@ -36,7 +36,7 @@ a .custom-question-centered {
   margin: 30px auto;
 }
 
-.custom-question-centered .btn-primary {
+.custom-question-centered .btn-primary, .custom-next-centered .btn-primary {
   background-color: rgb(0, 92, 232) !important;
   background-image: none !important;
   border-radius: 16px !important;
@@ -84,14 +84,28 @@ a .custom-question-centered {
 }
 
 
-.custom-buttons-centered input {
+.custom-buttons-centered input[type="checkbox"], .custom-10  input[type="checkbox"], .custom-buttons-centered input[type="radio"] {
     position: absolute;
     left: -9999px;
 }
-.custom-buttons-centered .checkbox label {
-    display: block;
+
+.custom-9 input[type="radio"] {
+    position: absolute;
+    left: -9999px;
+}
+
+.custom-9 .form-group, .custom-10 .form-group {
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+}
+.custom-10 .form-group {
+  margin: 10px 0;
+}
+
+.custom-9 label.radio-inline, .custom-10 label, .custom-buttons-centered label {
     margin: 0 7px;
-    padding: 8px 10px;
+    padding: 8px 35px;
     border: 1px solid #BBBBBB;
     background: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, .12);
@@ -101,16 +115,34 @@ a .custom-question-centered {
     border-radius: 16px;
     font-size: 12px;
 }
-.custom-buttons-centered label.selected {
+.custom-10 .checkbox label {
+  padding: 8px 10px 10px 10px;
+}
+.custom-buttons-centered .radio label {
+    padding: 8px 26px;
+}
+.container label.selected {
     background: #2595ff;
     color: #fff;
 }
-.radio_buttons div:first-child label {
-    margin-left: 0;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
+
+.form-group, h5.display-2 {
+  margin-bottom: 35px;
 }
-.radio_buttons div:last-child label {
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+
+.control-label {
+  margin: 15px 0; 
+}
+
+.custom-form-centered {
+  width: 89%;
+  margin: 0 auto;
+}
+
+.custom-h3 h3 {
+  margin: 0 0;
+}
+
+.custom-h3 {
+  margin-bottom: 20px;
 }
