--- a/src/App.css
+++ b/src/App.css
@@ -146,3 +146,34 @@ a .custom-question-centered {
 .custom-h3 {
   margin-bottom: 20px;
 }
+
+/*Q13*/
+
+div[name="domain_name"] label, .custom-next-centered label, .custom-site-form label {
+  border: none;
+  color: inherit;
+  box-shadow: none;
+  font-weight: 100;
+}
+
+div.custom-question-centered.custom-question-centered-no-margin {
+  margin-top: 0px;
+}
+
+h3.custom-h3-q13 {
+  margin-top: 50px;
+}
+
+div.custom-question-centered-last-section {
+  margin-top: 50px;
+}
+
+div.custom-13 {
+  margin-top: 6vh;
+}
+
+div.custom-16 label {
+  font-weight: normal;
+  font-size: 10px;
+}
+
