--- a/src/App.css
+++ b/src/App.css
@@ -177,3 +177,98 @@ div.custom-16 label {
   font-size: 10px;
 }
 
+h3.bl-blue-dark, .block-fill-height .container h5 {
+  color: #0C0454;
+  font-family: "azo-sans-web",sans-serif;
+  font-weight: 500;
+  line-height: 1.5;
+}
+
+.block-fill-height p {
+  color: rgb(140, 149, 164);
+}
+label {
+  color: #0C0454;
+}
+label.control-label {
+  color: rgb(140, 149, 164);
+}
+.radio input[type="radio"], .radio-inline input[type="radio"], .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"] {
+      margin-left: -30px;
+}
+
+.container input[type="text"] {
+  border-left: none;
+  border-top: none;
+  border-right: none;
+  border-bottom: 1px solid #A7B4C8 !important;
+  border-radius: 0;
+  box-shadow: none;
+}
+
+.has-error .form-control:focus {
+  box-shadow: none !important;
+  border-color: rgba(0,0,0,0);
+}
+.container .form-control:focus {
+  border-bottom: 2px solid #005ce8 !important;
+}
+/*Google animations */
+.relative {
+  position: relative;
+}
+.cd-label {
+  position: absolute;
+  top: -5px;
+}
+.focus .cd-label {
+  top: -5px;
+}
+
+/* The animation code */
+@keyframes focusIn {
+    from {top: -5px;}
+    to {top: -30px;}
+}
+
+@keyframes focusOut {
+    from {top: -30px;}
+    to {top: -5px;}
+}
+
+/* The element to apply the animation to */
+.focus {
+    top: -5px;
+    animation-name: focusIn;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+.unfocus {
+    top: -30px;
+    animation-name: focusOut;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+
+.hvr-underline-from-center:before {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  background: #005ce8;
+  height: 2px;
+  -webkit-transition-property: left, right;
+  transition-property: left, right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
+  left: 0;
+  right: 0;
+}
