--- a/src/App.css
+++ b/src/App.css
@@ -147,6 +147,9 @@ a .custom-question-centered {
   margin-bottom: 20px;
 }
 
+.custom-next-centered h6, .custom-next-centered h5, .custom-question-centered h6, .custom-question-centered h5, .custom-question-centered h3 {
+  text-align: center;
+}
 /*Q13*/
 
 div[name="domain_name"] label, .custom-next-centered label, .custom-site-form label {
@@ -453,10 +456,8 @@ section.loading {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-  z-index: 2;
-
+    background-color: rgba(140, 149, 164, 0.1);
+    z-index: 2;
 }
 
 section.loading .custom-header {
@@ -464,10 +465,10 @@ section.loading .custom-header {
 }
 
 section.loading .loading-progress {
-  -webkit-animation: boqChromePageProgressAnimation 1s infinite;
-    animation: boqChromePageProgressAnimation 1s infinite;
-    -webkit-animation-timing-function: cubic-bezier(0.4,0.0,1,1);
-    animation-timing-function: cubic-bezier(0.4,0.0,1,1);
+  -webkit-animation: boqChromePageProgressAnimation 3s infinite;
+    animation: boqChromePageProgressAnimation 3s infinite;
+    -webkit-animation-timing-function: cubic-bezier(0.8,0.0,2,2);
+    animation-timing-function: cubic-bezier(0.8,0.0,2,2);
     -webkit-animation-delay: .1s;
     animation-delay: .1s;
     position: absolute;
