--- a/src/App.css
+++ b/src/App.css
@@ -315,36 +315,39 @@ label.control-label {
   top: -3px;
   height: 20px;
   width: 20px;
-  transition: all 0.15s ease-out 0s;
-  background: #cbd1d8;
-  border: none;
+  transition: all 0.5s ease-out .2s;
+  background: #fff;
+  border: 2px solid #4285f4;
   color: #fff;
   cursor: pointer;
   display: inline-block;
   margin-right: 0.5rem;
-  outline: none;
-  position: relative;
   z-index: 1000;
   outline: none !important;
 }
 .radio input[type="radio"]:hover {
-  background: #9faab7;
-  outline: none !important;
+  cursor: pointer;
 }
 .radio input[type="radio"]:checked {
   background: #4285f4;
   outline: none !important;
 }
 .radio input[type="radio"]:checked::before {
-  height: 4 0px;
+  height: 20px;
   width: 20px;
   position: absolute;
   content: '•';
+  color: #4285f4;
   display: inline-block;
-  font-size: 26.66667px;
+  font-size: 42px;
   text-align: center;
-  line-height: 20px;
+  line-height: 16px;
   outline: none !important;
+  background-color: #fff;
+  border: 2px solid #4285f4;
+  border-radius: 50%;
+  left: -2px;
+  top: -2px;
 }
 .radio input[type="radio"]:checked::after {
   -webkit-animation: click-wave 0.65s;
@@ -465,12 +468,12 @@ section.loading .custom-header {
 }
 
 section.loading .loading-progress {
-  -webkit-animation: boqChromePageProgressAnimation 3s infinite;
-    animation: boqChromePageProgressAnimation 3s infinite;
+  -webkit-animation: boqChromePageProgressAnimation 1.5s infinite;
+    animation: boqChromePageProgressAnimation 1.5s infinite;
     -webkit-animation-timing-function: cubic-bezier(0.8,0.0,2,2);
     animation-timing-function: cubic-bezier(0.8,0.0,2,2);
-    -webkit-animation-delay: .1s;
-    animation-delay: .1s;
+    -webkit-animation-delay: 0.0s;
+    animation-delay: 0.0s;
     position: absolute;
     top: 0;
     left: 0;
@@ -479,4 +482,13 @@ section.loading .loading-progress {
     background: #68e;
     -webkit-transform-origin: 0 0;
     transform-origin: 0 0;
+}
+
+
+#root #questions textarea {
+  -webkit-appearance: none;
+  appearance: none;
+  outline: none;
+  border: none;
+  box-shadow: inset 2px 2px 2px 1px #dddddd;
 }
