--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ a .custom-question-centered {
 }
 
 .custom-buttons-centered {
-  width: 66%;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -130,6 +130,9 @@ a .custom-question-centered {
   margin-bottom: 35px;
 }
 
+.container h5 {
+  font-size: 14px;
+}
 .control-label {
   margin: 15px 0; 
 }
@@ -142,6 +145,10 @@ a .custom-question-centered {
 .custom-h3 h3 {
   margin: 0 0;
 }
+h3.custom-h3 {
+  font-size: 22px;
+}
+
 
 .custom-h3 {
   margin-bottom: 20px;
@@ -288,7 +295,6 @@ label.control-label {
 
 /*RADIO button effect*/
 
-
 @keyframes click-wave {
   0% {
     height: 20px;
@@ -305,6 +311,7 @@ label.control-label {
   }
 }
 
+
 .radio input[type="radio"] {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -315,6 +322,8 @@ label.control-label {
   top: -3px;
   height: 20px;
   width: 20px;
+  -webkit-transition: all 0.5s ease-out .2s;
+  -o-transition: all 0.5s ease-out .2s;
   transition: all 0.5s ease-out .2s;
   background: #fff;
   border: 2px solid #4285f4;
@@ -346,9 +355,37 @@ label.control-label {
   background-color: #fff;
   border: 2px solid #4285f4;
   border-radius: 50%;
-  left: -2px;
+  left: -1.5px;
   top: -2px;
 }
+
+/*IE Edge styles*/
+
+.radio input[type="radio"]::-ms-check {
+  color: #4285f4;
+  height: 18px;
+  width: 18px;
+  box-sizing: border-box;
+}
+
+@supports (-ms-ime-align:auto) {
+  @keyframes click-wave-edge {
+    0% {
+      border-width: 30px;
+      opacity: 0;
+      position: relative;
+    }
+    100% {
+      border-width: 2px;
+      opacity: 0.35;
+    }
+  }
+
+    .radio input[type="radio"]:checked {
+      animation: click-wave-edge 0.65s;
+  }
+}
+/*end of IE styles*/
 .radio input[type="radio"]:checked::after {
   -webkit-animation: click-wave 0.65s;
   -moz-animation: click-wave 0.65s;
@@ -495,4 +532,8 @@ section.loading .loading-progress {
 
 .has-error input {
   color: #a94442;
+}
+
+#domaine_details {
+  display: none;
 }
